--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -4,15 +4,14 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
+    # Configuração de permissões
     location / {
         try_files $uri $uri/ /index.html;
+        add_header 'Access-Control-Allow-Origin' '*';
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
+        add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range';
     }
-
-    # Configuração de CORS
-    add_header 'Access-Control-Allow-Origin' 'http://31.97.18.235:3003';
-    add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
-    add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
-    add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range';
 
     # Configuração de cache
     location ~* \.(js|css|png|jpg|jpeg|gif|ico)$ {
