--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 
 services:
-  db:
+  mysql:
     image: mysql:8.0
     container_name: arp_mysql
     restart: always
@@ -14,46 +14,36 @@ services:
       - "3308:3306"
     volumes:
       - mysql_data:/var/lib/mysql
-      - ./backend/database/init.sql:/docker-entrypoint-initdb.d/init.sql
     networks:
       - arp_network
 
   backend:
-    build:
-      context: ./backend
-      dockerfile: Dockerfile
+    build: ./backend
     container_name: arp_backend
     restart: always
-    ports:
-      - "5000:5000"
+    depends_on:
+      - mysql
     environment:
-      - NODE_ENV=development
-      - DB_HOST=db
-      - DB_PORT=3306
+      - NODE_ENV=production
+      - PORT=5000
+      - DB_HOST=mysql
       - DB_USER=${MYSQL_USER}
       - DB_PASSWORD=${MYSQL_PASSWORD}
       - DB_NAME=${MYSQL_DATABASE}
-      - JWT_SECRET=${JWT_SECRET}
-      - PORT=5000
-      - HOST=31.97.18.235
-    volumes:
-      - ./backend:/usr/src/app
-      - /usr/src/app/node_modules
-    depends_on:
-      - db
+      - DB_PORT=3306
+    ports:
+      - "5000:5000"
     networks:
       - arp_network
 
   frontend:
-    image: nginx:alpine
+    build: ./frontend
     container_name: arp_frontend
-    ports:
-      - "8080:80"
-    volumes:
-      - ./frontend:/usr/share/nginx/html
-      - ./frontend/nginx.conf:/etc/nginx/conf.d/default.conf
+    restart: always
     depends_on:
       - backend
+    ports:
+      - "8080:80"
     networks:
       - arp_network
 
