--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,13 +1,28 @@
+FROM node:18-alpine as builder
+
+# Definir diretório de trabalho
+WORKDIR /app
+
+# Copiar arquivos de dependências
+COPY package*.json ./
+
+# Instalar dependências
+RUN npm install
+
+# Copiar código fonte
+COPY . .
+
+# Fazer o build
+RUN npm run build
+
+# Imagem de produção
 FROM nginx:alpine
 
 # Copiar a configuração do nginx
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
-# Criar diretório para os arquivos estáticos
-RUN mkdir -p /usr/share/nginx/html
-
-# Copiar os arquivos do build
-COPY build/ /usr/share/nginx/html/
+# Copiar os arquivos do build da etapa anterior
+COPY --from=builder /app/build /usr/share/nginx/html
 
 # Ajustar permissões
 RUN chown -R nginx:nginx /usr/share/nginx/html && \
