--- a/backend/package.json
+++ b/backend/package.json
@@ -1,22 +1,20 @@
 {
   "name": "arp-backend",
   "version": "1.0.0",
-  "description": "Backend do sistema de gestão de atas",
-  "main": "server.js",
+  "description": "Backend do sistema ARP",
+  "main": "src/server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-rate-limit": "^6.7.0",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.2.0",
-    "sequelize": "^6.31.0",
-    "winston": "^3.8.2"
+    "sequelize": "^6.31.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
